--- a/app/views/users/_nav.erb
+++ b/app/views/users/_nav.erb
@@ -1,5 +1,4 @@
 <ul>
   <li><a href="/cohorts/<%= current_user.cohort.id %>">Cohort</a></li>
-  <li><a href="/assignments">Assignments</a></li>
-  <li><a href="/users/<%= current_user.id %>/availabilities">Availabilities</a></li>
+  <li><a href="users/<%= current_user.id %>/assignments">Assignments</a></li>
 </ul>
